src/objects/DS_PBI_Token_Setting__c.object
<CustomObject>
    <fields>
        <fullName>DS_Logged_In_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DS_Logged_In_User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DS_PBI_Token_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DS_PBI_AccessToken__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DS_PBI_AccessToken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DS_PBI_Expires_On__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DS_PBI_Expires_On</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DS_PBI_RefreshToken__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DS_PBI_RefreshToken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>DS_PBI_Token_Setting</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>DS_PBI_Token_Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DS_PBI_Token_Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>